--- a/forms.html
+++ b/forms.html
@@ -1,36 +1,88 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Select Form | Nexora Academy</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/scrollreveal"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Forms | Nexora Academy</title>
+
+<script src="https://cdn.tailwindcss.com"></script>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+<style>
+body { font-family: 'Poppins', sans-serif; }
+</style>
 </head>
 
-<body class="bg-gradient-to-br from-blue-900 to-indigo-900 text-white min-h-screen p-10">
+<body class="bg-gradient-to-br from-indigo-900 via-purple-900 to-blue-900 min-h-screen text-white">
 
-<h1 class="text-4xl font-bold text-center mb-16">Choose Your Form</h1>
+<!-- Navbar -->
+<nav class="flex justify-between items-center p-6">
+  <h1 class="text-2xl font-bold">Nexora Academy</h1>
+  <button onclick="logout()"
+    class="bg-red-500 px-4 py-2 rounded-lg hover:bg-red-600 transition">
+    Logout
+  </button>
+</nav>
 
-<div class="grid md:grid-cols-3 gap-10 max-w-6xl mx-auto">
+<!-- Header -->
+<section class="text-center mt-10">
+  <h2 class="text-4xl font-bold mb-4">Select Your Form</h2>
+  <p class="text-gray-200">Choose your level to access subjects and quizzes.</p>
+</section>
 
-  <a href="form1.html" class="bg-white text-gray-900 p-10 rounded-2xl text-center shadow-lg hover:scale-105 transition">
-    <h2 class="text-2xl font-bold">Form 1</h2>
-  </a>
+<!-- Forms Grid -->
+<section class="mt-16 px-6 max-w-5xl mx-auto">
+  <div class="grid md:grid-cols-3 gap-10">
 
-  <a href="form2.html" class="bg-white text-gray-900 p-10 rounded-2xl text-center shadow-lg hover:scale-105 transition">
-    <h2 class="text-2xl font-bold">Form 2</h2>
-  </a>
+    <a href="subjects.html?form=1"
+       class="bg-white text-indigo-900 p-10 rounded-xl shadow-xl text-center hover:scale-105 transition">
+       <h3 class="text-2xl font-bold">Form 1</h3>
+    </a>
 
-  <a href="form3.html" class="bg-white text-gray-900 p-10 rounded-2xl text-center shadow-lg hover:scale-105 transition">
-    <h2 class="text-2xl font-bold">Form 3</h2>
-  </a>
+    <a href="subjects.html?form=2"
+       class="bg-white text-indigo-900 p-10 rounded-xl shadow-xl text-center hover:scale-105 transition">
+       <h3 class="text-2xl font-bold">Form 2</h3>
+    </a>
 
-</div>
+    <a href="subjects.html?form=3"
+       class="bg-white text-indigo-900 p-10 rounded-xl shadow-xl text-center hover:scale-105 transition">
+       <h3 class="text-2xl font-bold">Form 3</h3>
+    </a>
 
-<script>
-ScrollReveal().reveal('a', { interval: 200, distance: '60px', origin: 'bottom' });
+  </div>
+</section>
+
+<!-- Firebase Protection -->
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { getAuth, onAuthStateChanged, signOut }
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyAo-EDgZOxuUY_YUKijv2mRPiyZv-ABioY",
+  authDomain: "nexora-academy-c4fd9.firebaseapp.com",
+  projectId: "nexora-academy-c4fd9",
+  storageBucket: "nexora-academy-c4fd9.appspot.com",
+  messagingSenderId: "56132609079",
+  appId: "1:56132609079:web:a162000d02a9ea20a98bb2"
+};
+
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+
+// Protect page
+onAuthStateChanged(auth, (user) => {
+  if (!user) {
+    window.location.href = "login.html";
+  }
+});
+
+window.logout = function() {
+  signOut(auth).then(() => {
+    window.location.href = "login.html";
+  });
+};
 </script>
 
 </body>
