--- a/subject.html
+++ b/subject.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Subject | Nexora Academy</title>
+<title>Subjects | Nexora Academy</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@ body { font-family: 'Poppins', sans-serif; }
 
 <body class="bg-gradient-to-br from-indigo-900 via-purple-900 to-blue-900 min-h-screen text-white">
 
-<!-- NAVBAR -->
+<!-- Navbar -->
 <nav class="flex justify-between items-center p-6">
   <h1 class="text-2xl font-bold">Nexora Academy</h1>
   <a href="forms.html"
@@ -25,125 +25,57 @@ body { font-family: 'Poppins', sans-serif; }
   </a>
 </nav>
 
-<!-- SUBJECT HEADER -->
+<!-- Header -->
 <section class="text-center mt-8">
-  <h2 id="subjectTitle" class="text-4xl font-bold mb-2"></h2>
-  <p class="text-gray-200">Access official textbooks and take quizzes.</p>
+  <h2 id="formTitle" class="text-4xl font-bold mb-4"></h2>
+  <p class="text-gray-200">Select a subject to view books and quizzes.</p>
 </section>
 
-<!-- BOOKS GRID -->
-<section class="mt-16 px-6 max-w-6xl mx-auto">
-
-  <h3 class="text-2xl font-bold text-center mb-10">📚 Mathematics Books</h3>
-
-  <div class="grid md:grid-cols-3 gap-8">
-
-    <!-- BOOK CARD TEMPLATE -->
-
-    <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center hover:scale-105 transition">
-      <h4 class="font-bold mb-3">Algebraic Expression and Factorisation</h4>
-      <a href="assets/books/form1/mathematics/algebraic-expression-and-factorisation.pdf"
-         target="_blank"
-         class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block hover:bg-indigo-700 transition">
-         View Book
-      </a>
-    </div>
-
-    <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center hover:scale-105 transition">
-      <h4 class="font-bold mb-3">Angles and Pythagorean Theorem</h4>
-      <a href="assets/books/form1/mathematics/angles-and-pythagorean-theorem.pdf"
-         target="_blank"
-         class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block hover:bg-indigo-700 transition">
-         View Book
-      </a>
-    </div>
-
-    <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center hover:scale-105 transition">
-      <h4 class="font-bold mb-3">Data Organisation, Analysis and Presentation</h4>
-      <a href="assets/books/form1/mathematics/data-organisation-analysis-and-presentation.pdf"
-         target="_blank"
-         class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block hover:bg-indigo-700 transition">
-         View Book
-      </a>
-    </div>
-
-    <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center hover:scale-105 transition">
-      <h4 class="font-bold mb-3">Fractions and Percentages</h4>
-      <a href="assets/books/form1/mathematics/fractions-and-percentages.pdf"
-         target="_blank"
-         class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block hover:bg-indigo-700 transition">
-         View Book
-      </a>
-    </div>
-
-    <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center hover:scale-105 transition">
-      <h4 class="font-bold mb-3">Linear Equations, Relations and Functions</h4>
-      <a href="assets/books/form1/mathematics/linear-equations-relations-and-functions.pdf"
-         target="_blank"
-         class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block hover:bg-indigo-700 transition">
-         View Book
-      </a>
-    </div>
-
-    <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center hover:scale-105 transition">
-      <h4 class="font-bold mb-3">Number Set</h4>
-      <a href="assets/books/form1/mathematics/number-set.pdf"
-         target="_blank"
-         class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block hover:bg-indigo-700 transition">
-         View Book
-      </a>
-    </div>
-
-    <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center hover:scale-105 transition">
-      <h4 class="font-bold mb-3">Perimeter, Area and Volume</h4>
-      <a href="assets/books/form1/mathematics/perimeter-area-and-volume.pdf"
-         target="_blank"
-         class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block hover:bg-indigo-700 transition">
-         View Book
-      </a>
-    </div>
-
-    <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center hover:scale-105 transition">
-      <h4 class="font-bold mb-3">Probability of Independent Events</h4>
-      <a href="assets/books/form1/mathematics/probability-of-independent-events.pdf"
-         target="_blank"
-         class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block hover:bg-indigo-700 transition">
-         View Book
-      </a>
-    </div>
-
-    <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center hover:scale-105 transition">
-      <h4 class="font-bold mb-3">Vectors and Trigonometry</h4>
-      <a href="assets/books/form1/mathematics/vectors-and-trigonometry.pdf"
-         target="_blank"
-         class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block hover:bg-indigo-700 transition">
-         View Book
-      </a>
-    </div>
-
-  </div>
-</section>
-
-<!-- QUIZ BUTTON -->
-<section class="text-center mt-16 pb-16">
-  <a id="quizBtn"
-     class="bg-green-500 hover:bg-green-600 px-8 py-3 rounded-lg text-lg font-semibold transition">
-     Start Quiz
-  </a>
+<!-- Subjects Grid -->
+<section class="mt-12 px-6 max-w-6xl mx-auto">
+  <div id="subjectsGrid" class="grid md:grid-cols-3 gap-8"></div>
 </section>
 
 <script>
 const params = new URLSearchParams(window.location.search);
 const form = params.get("form") || "1";
-const subject = params.get("subject") || "Mathematics";
 
-document.getElementById("subjectTitle").innerText =
-  `Form ${form} – ${subject}`;
+document.getElementById("formTitle").innerText = `Form ${form} Subjects`;
 
-document.getElementById("quizBtn").href =
-  `quiz.html?form=${form}&subject=${subject}`;
+const subjects = [
+  "Mathematics",
+  "Biology",
+  "Chemistry",
+  "Physics",
+  "Government",
+  "Geography",
+  "Computer Science",
+  "ICT",
+  "Art and Design Studio",
+  "Additional Mathematics",
+  "Economics",
+  "Food and Nutrition",
+  "P.E.H Core",
+  "P.E.H Elective",
+  "French",
+  "Business Management"
+];
+
+const grid = document.getElementById("subjectsGrid");
+
+subjects.forEach(subject => {
+  const subjectCard = document.createElement("a");
+  subjectCard.href = `subject.html?form=${form}&subject=${encodeURIComponent(subject)}`;
+  subjectCard.className =
+    "bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center hover:scale-105 transition block";
+
+  subjectCard.innerHTML = `<h3 class="font-bold text-lg">${subject}</h3>`;
+
+  grid.appendChild(subjectCard);
+});
 </script>
 
 </body>
 </html>
+
 
