--- a/form1.html
+++ b/form1.html
@@ -2,125 +2,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Form 1 Subjects | Nexora Academy</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Subjects | Nexora Academy</title>
 
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.tailwindcss.com"></script>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <!-- GSAP -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-
-  <!-- ScrollReveal -->
-  <script src="https://unpkg.com/scrollreveal"></script>
-
-  <style>
-    body { font-family: 'Poppins', sans-serif; }
-  </style>
+<style>
+body { font-family: 'Poppins', sans-serif; }
+</style>
 </head>
 
-<body class="bg-gradient-to-br from-indigo-950 via-purple-900 to-blue-900 text-white min-h-screen">
+<body class="bg-gradient-to-br from-indigo-900 via-purple-900 to-blue-900 min-h-screen text-white">
 
 <!-- Navbar -->
 <nav class="flex justify-between items-center p-6">
   <h1 class="text-2xl font-bold">Nexora Academy</h1>
-  <a href="forms.html" class="bg-yellow-400 text-black px-4 py-2 rounded-lg font-semibold hover:bg-yellow-300">
-    Back
+  <a href="forms.html"
+     class="bg-white text-indigo-900 px-4 py-2 rounded-lg font-semibold hover:bg-gray-200 transition">
+     Back
   </a>
 </nav>
 
 <!-- Header -->
-<section class="text-center py-12">
-  <h2 class="text-4xl md:text-5xl font-extrabold mb-4">
-    Form 1 Subjects
-  </h2>
-  <p class="text-gray-300 text-lg">
-    Ghana New Government Curriculum – Quiz Based Learning
-  </p>
+<section class="text-center mt-8">
+  <h2 id="formTitle" class="text-4xl font-bold mb-4"></h2>
+  <p class="text-gray-200">Select a subject to view books and quizzes.</p>
 </section>
 
 <!-- Subjects Grid -->
-<section class="px-6 pb-20">
-  <div class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 max-w-7xl mx-auto">
-
-    <!-- SUBJECT CARD TEMPLATE -->
-    
-    <a href="subject.html?form=1&subject=Mathematics" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">Mathematics</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=Biology" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">Biology</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=Chemistry" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">Chemistry</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=Physics" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">Physics</h3>
-    </a>
-
-    <a href="#" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">Government</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=Geography" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">Geography</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=Computer Science" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">Computer Science</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=ICT" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">ICT</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=Art & Design Studio" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">Art & Design Studio</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=Additional Mathematics" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">Additional Mathematics</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=Economics" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">Economics</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=Food & Nutrition" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">Food & Nutrition</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=P.E.H Core" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">P.E.H Core</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=P.E.H Elective" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">P.E.H Elective</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=French" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">French</h3>
-    </a>
-
-    <a href="subject.html?form=1&subject=Business Management" class="subject-card bg-white/10 backdrop-blur-lg p-6 rounded-2xl shadow-xl hover:scale-105 hover:bg-yellow-400 hover:text-black transition duration-300">
-      <h3 class="text-xl font-bold">Business Management</h3>
-    </a>
-
-  </div>
+<section class="mt-12 px-6 max-w-6xl mx-auto">
+  <div id="subjectsGrid" class="grid md:grid-cols-3 gap-8"></div>
 </section>
 
-<!-- Animations -->
 <script>
-  gsap.from("h2", {y: -50, opacity: 0, duration: 1});
-  ScrollReveal().reveal('.subject-card', {
-    interval: 100,
-    distance: '40px',
-    origin: 'bottom'
-  });
+const params = new URLSearchParams(window.location.search);
+const form = params.get("form") || "1";
+
+document.getElementById("formTitle").innerText = `Form ${form} Subjects`;
+
+const subjects = [
+  "Mathematics",
+  "Biology",
+  "Chemistry",
+  "Physics",
+  "Government",
+  "Geography",
+  "Computer Science",
+  "ICT",
+  "Art and Design Studio",
+  "Additional Mathematics",
+  "Economics",
+  "Food and Nutrition",
+  "P.E.H Core",
+  "P.E.H Elective",
+  "French",
+  "Business Management"
+];
+
+const grid = document.getElementById("subjectsGrid");
+
+subjects.forEach(subject => {
+  const subjectCard = document.createElement("a");
+  subjectCard.href = `subject.html?form=${form}&subject=${encodeURIComponent(subject)}`;
+  subjectCard.className =
+    "bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center hover:scale-105 transition block";
+
+  subjectCard.innerHTML = `<h3 class="font-bold text-lg">${subject}</h3>`;
+
+  grid.appendChild(subjectCard);
+});
 </script>
 
 </body>
